[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/QCReportView/qcreport_view.gd" type="Script" id=1]
[ext_resource path="res://scenes/QuestionnaireView/QuestionnaireView.tscn" type="PackedScene" id=2]

[node name="QCReportView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
script = ExtResource( 1 )

[node name="QuestionnaireView" parent="." instance=ExtResource( 2 )]
visible = false

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 40
dragger_visibility = 2

[node name="PanelContainer2" type="PanelContainer" parent="HSplitContainer"]
margin_right = 270.0
margin_bottom = 540.0

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 263.0
margin_bottom = 533.0
split_offset = 650
dragger_visibility = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/PanelContainer2/VSplitContainer"]
margin_right = 256.0
margin_bottom = 506.0

[node name="EditReport" type="Button" parent="HSplitContainer/PanelContainer2/VSplitContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 40.0
rect_min_size = Vector2( 216, 40 )
text = "Edit Report"

[node name="InteractiveQuestionnaire" type="Button" parent="HSplitContainer/PanelContainer2/VSplitContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 256.0
margin_bottom = 84.0
rect_min_size = Vector2( 216, 40 )
text = "Interactive Questionnaire"

[node name="Button" type="Button" parent="HSplitContainer/PanelContainer2/VSplitContainer"]
margin_top = 506.0
margin_right = 256.0
margin_bottom = 526.0
text = "Generate Report"

[node name="ReportView" type="PanelContainer" parent="HSplitContainer"]
margin_left = 270.0
margin_right = 964.0
margin_bottom = 540.0

[connection signal="pressed" from="HSplitContainer/PanelContainer2/VSplitContainer/VBoxContainer/EditReport" to="." method="_on_EditReport_pressed"]
[connection signal="pressed" from="HSplitContainer/PanelContainer2/VSplitContainer/Button" to="." method="_on_Button_pressed"]
